# rsnum

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wheel.sh  gitset.sh  plots.py  pyproject.toml  run_tests.py
.trae/rules/: git-commit-message.md
python/rsnumpy/: __init__.py  array_methods.py  array_ops.py  char.py  math_functions.py  matlib.py  statistics.py
python/rsnumpy/linalg/: __init__.py
python/rsnumpy/random/: __init__.py
rsnum/: __init__.py  array_methods.py  io.py  statistics.py
rsnum/linalg/: __init__.py
rsnum/polynomial/: __init__.py
rsnumpy/: __init__.py  array_methods.py  array_ops.py  statistics.py
src/: fft.rs  indexing.rs  lib.rs  linalg.rs  random.rs
testing/: run_all_tests.py
wheelhouse/: rsnum-0.1.2-cp313-cp313-macosx_11_0_arm64.whl
