[package]
name = "rsnumpy"
version = "1.0.1"
edition = "2024"

[lib]
name = "rsnumpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
ndarray = { version = "0.17.2", features = ["rayon", "blas", "serde"] }
rayon = "1.12.0"
rand = "0.10.1"
rand_distr = "0.6.0"
num-traits = "0.2.19"
rustfft = "6.4.1"
zip = "8.6.0"
num-complex = "0.4.6"
thiserror = "2.0.0"

[features]
default = []
blas = ["ndarray/blas"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = false
