[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rsnumpy"
version = "1.0.2"
requires-python = ">=3.10"
description = "A Rust-powered NumPy-compatible array library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "YJ-Niu" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
module-name = "rsnumpy._core"
python-source = "python"
include = ["python/rsnumpy/__init__.py", "python/rsnumpy/linalg/__init__.py", "python/rsnumpy/random/__init__.py"]
